--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
-<my-app>loading</my-app>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>EvenGreenBookStore</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="png/jpg" href="./assets/BookstoreLogo.png">
+</head>
+<body>
+  <app-root></app-root>
+</body>
+</html>
